# BioinfoUtilityPackage

./: README.md  pyproject.toml  requirements.txt
deprecated/main/: Step01_R_Readin.rmd  Step02_R_Quality_Control.rmd  Step03_ToH5AD.rmd  Step04a_merge_for_debatch.py  Step04b_scvi_debatch.py  Step05_standard_dimreduc.py  Step06_general_annotation.py  Step07a_iterative_annot.py  Step07b_Characterization.py  Step07c_DEG_analysis.py  Step07d_Stats(Corr_and_Dist).py  Step07d_Stats(abundance).py  Step08a_Cellphonedb_process.py  Step08b_Cellphonedb_analysis.py  Step08c_Cellphonedb_plot.py  Step09a_Pyscenic_prepare.py  Step09b_Pyscenic_analysis.py  Step10a_xgboost_model_test.py  Step10b_xgboost_lodo_cv.py  Step11_urgent_repair.py  Step11a_scFates_demo.py  Step11b_scFates_loop.py  Step11c_scFates_OnebyOne.py  Step11d_scFates_ObO_followup.py  Step12_scvelo_demo.py  [test_only]scvelo_demo.py  临时.py
examples/: AnnData Annotation and Edition.py  K-D-K Differential Abundance Analysis.py  K-D-K-D Methodological Analysis.py  Statistical Test.py  Xgboost Example.py  xgboost.py
project/: Step07_Summary.py
project/Step08_Abundance/: Step08a_Preparation.py  Step08b_Simulation.py  Step08c_Realdata.py  Step08d_Additional_Analysis.py  Test_Sccoda.py
project/Step09_Cellphonedb/: Step09a_Preparation.py  Step09a_Process.py  Step09b_Readin.py  Step09c_Plot.py  Step09d_Bubble_Fraction_Bar.py
project/Step12_Custom_Visualisation/: Step12a_Spearman_Corr.py  Step12b_Gene_Expression.py
src/: base_anndata_ops.py  base_anndata_vis.py  ext_anndata_ops.py  obs_editor.py
src/core/: go_module.py  (+11 more)
(+130 files in other folders)
