[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Biu"              # 包名（pip install 时使用）
version = "0.1.0"
description = "A lightweight Python tool for pythonic bioinfo analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "scanpy>=1.9.0",
    "anndata"
]
license = {text = "MIT"}
authors = [{name="KforKuma", email="johnhsiung1998@gmail.com"}]


[tool.setuptools.packages.find]
where = ["src"]
